--- a/package.json
+++ b/package.json
@@ -4,15 +4,35 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
+    "@react-native-camera-roll/camera-roll": "^7.6.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@shopify/react-native-skia": "0.1.221",
+    "expo": "~50.0.17",
+    "expo-dev-client": "~3.3.11",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-fast-tflite": "^1.2.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-base64": "^0.1.4",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-vision-camera": "^3.9.2",
+    "react-native-worklets-core": "^0.5.0",
+    "react-navigation": "^5.0.0",
+    "undefined": "@react-navigation/native-stack;",
+    "vision-camera-resize-plugin": "2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
